--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bootstrap": "^5.1.3",
     "create-react-app": "^5.0.0",
     "jwt-decode": "^3.1.2",
+    "mui": "^0.0.1",
     "node": "^17.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
