--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jwt-decode": "^3.1.2",
     "mui": "^0.0.1",
     "react": "^17.0.2",
+    "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
